--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,3 +2,5 @@ name: PlayerFilter
 version: ${project.version}
 main: org.xjcraft.playerfilter.PlayerFilter
 api-version: 1.13
+depend:
+  - SimpleSpigot
